1561078961 | 6 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M tools/steamvr_environments/game/steamtours/cfg/bindings_knuckles.json,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak02_dir.txt,  M tools/steamvr_environments/game/steamtours/steam.inf
https://steamdb.info/patchnotes/3940085/

--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -345,6 +345,11 @@
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_Action" "Visit oculus.com"
 "VRInitError_VendorSpecific_UnableToConnectToOculusRuntime_ActionURL" "https://www.oculus.com/rift-patch/"
 
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header" "SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description" "There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action" "Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL" "https://www.oculus.com/setup/"
+
 "VRInitError_VendorSpecific_HmdFound_CantOpenDevice_Header" "USB Error"
 "VRInitError_VendorSpecific_HmdFound_CantOpenDevice_Description" "Please check your headset's USB connection and try again."
 "VRInitError_VendorSpecific_HmdFound_CantOpenDevice_Action" "More info"
