1561160406 | 21 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_errors_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_errors_danish.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_french.txt,  M content/vrmonitor/translations/vrmonitor_errors_greek.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_norwegian.txt,  M content/vrmonitor/translations/vrmonitor_errors_polish.txt,  M content/vrmonitor/translations/vrmonitor_errors_russian.txt,  M content/vrmonitor/translations/vrmonitor_errors_spanish.txt,  M content/vrmonitor/translations/vrmonitor_errors_turkish.txt,  M content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt,  M content/vrmonitor/translations/vrmonitor_russian.txt,  M content/vrmonitor/translations/vrmonitor_thai.txt,  M tools/steamvr_environments/game/steamtours/cfg/bindings_holographic.json,  M tools/steamvr_environments/game/steamtours/cf
https://steamdb.info/patchnotes/3943493/

--- a/content/vrmonitor/translations/vrmonitor_errors_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_danish.txt
@@ -1207,5 +1207,23 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/da/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR-fejl"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Der er et problem med Oculus-installationsfilen. Genstart, og bekræft, at Oculus-softwaren er installeret og opdateret."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Gå til oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Skift til en højere framerate?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Skift og genstart"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatisk"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"din tilpassede"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
