--- a/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_spanish.txt
@@ -1207,5 +1207,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/es/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"Error de SteamVR"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Hay un problema con la instalación en tiempo de ejecución de Oculus. Reinicia y verifica que el software de Oculus esté instalado y actualizado."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visita oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"¿Cambiar a una velocidad de fotogramas más alta?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"¡Tu visor admite varias frecuencias de actualización!<br>Actualmente está configurado a <b>%1 fotogramas por segundo</b>. ¿Quieres cambiar a <b>%2</b>?<br><br><i>Para mantener la misma carga de GPU, la resolución de %5 se ajustará de %3% a %4%. Siempre puedes controlar esto y más en Ajustes > Vídeo.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Cambiar y reiniciar"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automático"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"personalizado"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
