--- a/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
@@ -15,13 +15,13 @@
 "[english]Error_HMDDoesNotTrack_Description"	"Make sure your headset is in view of base station. "
 "Error_HMDDoesNotTrack_Action"	"Sorun giderme"
 "[english]Error_HMDDoesNotTrack_Action"	"More info"
-"Error_NoCompositorAvailable_Header"	"Aktarıcı kullanılabilir değil"
+"Error_NoCompositorAvailable_Header"	"SteamVR Hatası"
 "[english]Error_NoCompositorAvailable_Header"	"SteamVR Fail"
 "Error_NoCompositorAvailable_Description"	"Bunun için SteamVR doğru bir şekilde çalıştırmanız gerekmekte."
 "[english]Error_NoCompositorAvailable_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_NoCompositorAvailable_Action"	"SteamVR'ı Yeniden Başlat"
 "[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
-"Error_NoChaperoneAvailable_Header"	"Oda ayarlı değil"
+"Error_NoChaperoneAvailable_Header"	"Oda Kurulumu"
 "[english]Error_NoChaperoneAvailable_Header"	"Room Setup"
 "Error_NoChaperoneAvailable_Description"	"SteamVR'ın düzgün çalışması için odanızı ayarlayın."
 "[english]Error_NoChaperoneAvailable_Description"	"Looks like it's time to configure your VR play area and chaperone boundaries."
