--- a/content/vrmonitor/translations/vrmonitor_errors_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_greek.txt
@@ -1225,5 +1225,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"Σφάλμα SteamVR"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Υπάρχει ένα πρόβλημα με το περιβάλλον εκτέλεσης της εγκατάστασης του Oculus. Επανεκκινήστε και επιβεβαιώστε ότι το λογισμικό Oculus είναι εγκατεστημένο και ενημερωμένο."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Επισκεφτείτε το oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Εναλλαγή σε υψηλότερο ρυθμό καρέ;"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Το headset σας υποστηρίζει πολλαπλούς ρυθμούς ανανέωσης!<br>Αυτή τη στιγμή είναι ορισμένο σε <b>%1 καρέ το δευτερόλεπτο</b>. Θέλετε να εναλλάξετε σε <b>%2</b>;<br><br><i>Για διατήρηση του ίδιου φόρτου κάρτας γραφικών, η ανάλυση της εφαρμογής %5 θα προσαρμοστεί από %3% σε %4%. Μπορείτε πάντα να ελέγξετε αυτό και περισσότερα στις Ρυθμίσεις > Γραφικά.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Εναλλαγή και επανεκκίνηση"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"αυτόματα"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"η προσαρμογή σας"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
