--- a/content/vrmonitor/translations/vrmonitor_errors_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_russian.txt
@@ -25,7 +25,7 @@
 "[english]Error_NoChaperoneAvailable_Header"	"Room Setup"
 "Error_NoChaperoneAvailable_Description"	"Похоже, вам нужно задать игровую зону и пространственную сетку."
 "[english]Error_NoChaperoneAvailable_Description"	"Looks like it's time to configure your VR play area and chaperone boundaries."
-"Error_NoChaperoneAvailable_Action"	"Запустить настройку комнаты"
+"Error_NoChaperoneAvailable_Action"	"Настроить комнату"
 "[english]Error_NoChaperoneAvailable_Action"	"Perform Room Setup"
 "Error_CompositorNotFullscreen_Header"	"Ошибка шлема"
 "[english]Error_CompositorNotFullscreen_Header"	"Headset Error"
@@ -1209,5 +1209,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/ru/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"Ошибка SteamVR"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Произошла ошибка при запуске программного обеспечения от Oculus. Перезагрузите компьютер и убедитесь, что программы Oculus установлены и обновлены до последней версии."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Посетите oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Увеличить частоту кадров?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Ваш шлем поддерживает несколько режимов частоты кадров!<br>Сейчас она составляет <b>%1 кадров в секунду</b>. Хотите изменить её на <b>%2</b>?<br><br><i>Чтобы нагрузка на видеокарту не изменилась, разрешение приложения «%5» будет изменено с %3% на %4%. Эти и другие параметры также можно изменить в меню «Настройки > Графика».</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Изменить и перезапустить"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"автоматически"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"вручную"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
