--- a/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
@@ -1209,5 +1209,11 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/uk/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"Помилка SteamVR"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
 }
 }
