--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -2398,5 +2398,9 @@
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"ระบบ Oculus ได้ขาดการเชื่อมต่อจากจอแสดงผล กรุณาตรวจสอบการเชื่อมต่อเครื่องสวมศีรษะของคุณแล้วจึงรีสตาร์ท"
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"สถานีฐานถูกอัปเดตเรียบร้อยแล้ว คุณอาจจำเป็นต้องถอดสายไฟและเสียบสายไฟของสถานีฐานของคุณอีกครั้ง เพื่อให้อุปกรณ์ได้ลงทะเบียนว่าถูกอัปเดตแล้ว"
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"สถานีฐานถูกอัปเดตเรียบร้อยแล้ว"
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
 }
 }
