1561426409 | 7 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_1_0_left/valve_controller_knu_1_0_left.json,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_1_0_right/valve_controller_knu_1_0_right.json,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_ev2_0_left/valve_controller_knu_ev2_0_left.json,  M drivers/indexcontroller/resources/rendermodels/valve_controller_knu_ev2_0_right/valve_controller_knu_ev2_0_right.json,  M resources/rendermodels/vr_controller_vive_1_5/vr_controller_vive_1_5.json
https://steamdb.info/patchnotes/3950842/

--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -636,6 +636,7 @@
 "MessageBox_Forget" "Forget"
 "MessageBox_RefreshAll" "Refresh All"
 "MessageBox_OpenWirelessSettings" "Bluetooth Settings"
+"MessageBox_RemindMeLater" "Remind Me Later"
 
 "MonitorController_NotAbleToStartSteam" "Not able to start Steam."
 
@@ -702,13 +703,17 @@
 
 "FirmwareWizard_UpdateMoreFirmware" "Update More Devices"
 
+"FirmwareWizard_Nag_Title" "Recommended Device Update"
+
 "FirmwareWizard_Shutdown_Title" "Update Device"
 "FirmwareWizard_Shutdown_TextContent" "To update your device, SteamVR will need to quit any currently running VR applications.\n\nWould you like to continue?"
 "FirmwareWizard_WaitingForShutdown_TextContent" "Preparing system for device update..."
 "FirmwareWizard_ShutdownForRecovery_TextContent" "A component of your hardware requires a device update to restore it to an operational state.\n\nWould you like to continue?"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent" "Your headset requires a device update to continue using SteamVR.\n\nWould you like to continue?"
 "FirmwareWizard_DeviceOverview_Title" "Update Device"
+"FirmwareWizard_DeviceOverview_Nagging_Title" "Device Updates Required"
 "FirmwareWizard_DeviceOverview_TextContent" "Which device would you like to update?"
+"FirmwareWizard_DeviceOverview_TextContent_Nag" "Required device updates are available. Select a device to update."
 "FirmwareWizard_DeviceOverview_UpdateAvailable" "Update available"
 "FirmwareWizard_DeviceOverview_UpToDate" "Up to date"
 "FirmwareWizard_DeviceOverview_NoUpdateDataAvailable" "No update data available"
